// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> Should render with error and match the snapshot 1`] = `
<div
  class="field"
>
  <label
    class="styled__StyledLabel-oaisvy-0 gsmrPq"
  >
    Label
  </label>
  <div
    class="control"
  >
    <input
      class="styled__Input-ms4xi4-0 cMqlpT"
    />
  </div>
  <p
    class="help is-danger"
  >
    error
  </p>
</div>
`;

exports[`<Input /> Should render without error and match the snapshot 1`] = `
<div
  class="field"
>
  <label
    class="styled__StyledLabel-oaisvy-0 gJTorn"
  >
    Label
  </label>
  <div
    class="control"
  >
    <input
      class="styled__Input-ms4xi4-0 cMqlpT"
    />
  </div>
</div>
`;
